# telegram-bot-sample

./: LICENSE  docker-compose.example.yml  example.Dockerfile  pyproject.toml  telegram_bot_sample.example.toml
src/telegram_bot_sample/: cli.py  config.py
src/telegram_bot_sample/application/interactors/user/: check_user_is_owner.py
src/telegram_bot_sample/application/interfaces/: command.py  transaction_manager.py
src/telegram_bot_sample/domain/: type_hints.py
src/telegram_bot_sample/infrastructure/aiogram/: storage.py
src/telegram_bot_sample/infrastructure/aiogram_dialog/: utils.py
src/telegram_bot_sample/infrastructure/aiogram_dialog/widgets/: localization.py
src/telegram_bot_sample/infrastructure/dishka/: injects.py
src/telegram_bot_sample/infrastructure/localization/: entities.py  storage.py
src/telegram_bot_sample/infrastructure/postgresql/: mixin.py  transaction_manager.py
src/telegram_bot_sample/main/: build_container.py  run.py  setup.py
src/telegram_bot_sample/main/providers/: config.py  interactor.py
src/telegram_bot_sample/presentation/bot/: states.py
src/telegram_bot_sample/presentation/bot/filters/: user_is_owner.py
src/telegram_bot_sample/presentation/bot/middlewares/: container.py
src/telegram_bot_sample/presentation/bot/presenters/: main.py  main_menu.py
src/telegram_bot_sample/presentation/bot/presenters/admin/: main.py
src/telegram_bot_sample/presentation/bot/presenters/user/: main.py
